# vc-brain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SUBMISSION.md  backtest_report.json  backtest_report_full.json  make_sample_decks.py  pyproject.toml  render.yaml  render_start.sh  seed_demo.py  thesis.json
.github/workflows/: weekly-refresh.yml
data/: curated_profiles.json  vcbrain-seed.sqlite3
data/sample_decks/: dataforge_inflated.pptx  nimbusrl_honest.pptx
scripts/: refresh_seed.py
vcbrain/: app.py  backtest.py  cli.py  contacts.py  curated.py  db.py  deck.py  entities.py  intelligence.py  ledger.py  score.py  search.py  thesis.py  trust.py
vcbrain/connectors/: arxiv.py  base.py  devpost.py  github.py  hackernews.py  linkedin.py  tavily.py  ycombinator.py
