[project]
name = "vcbrain"
version = "0.1.0"
description = "The VC Brain — Hack-Nation 6th Global AI Hackathon, Challenge 2 (Maschmeyer Group)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vcbrain"]
